Bug 169981 - kde should not show non user montable media
Summary: kde should not show non user montable media
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-28 15:17 UTC by David
Modified: 2008-09-27 16:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David 2008-08-28 15:17:38 UTC
Version:           svn (using Devel)
OS:                Linux
Installed from:    Compiled sources

I open this bug by a recomendation in bug #160635.
I'll quote some things to explain it:

[quote]
1.- Exclude non user mountable media (that media without user in its mount options line), as it always lists my /boot partition (not mounted automatically) for example, which is not user mountable, only mountable by root. So it is a real nonsense to have that kind of partition listed in there by default which made me to hid it from that list. 
[/quote]

[quote]
for #1 it's indeed because /boot is not mounted on your system. Actually the underlying system doesn't give us the mountpoint of a device if it's not mounted (no we're not reading the fstab).
[/quote]

Maybe it is not regarding only dolphin, as it is KDE wise (new device notifier, ...)
Comment 1 Kevin Ottens 2008-09-27 16:37:56 UTC
Committed a fix in revision 865415.

Thanks for the report.