Find mountpoints for unmounted devices in our fstab cache just in case. This way we can apply the "ignore" rule properly and avoid showing the /boot partition of some users when it's not mounted.

BTW, I just noticed this was sitting on my laptop since Akademy 2008...
About time I commit it.

BUG: 169981



svn path=/trunk/KDE/kdelibs/; revision=865415