solid/solid/backends/hal/halfstabhandling.h
@@ -35,6 +35,7 @@ class FstabHandling
 {
 public:
     static bool isInFstab(const QString &device);
+    static QStringList possibleMountPoints(const QString &device);
     static QProcess *callSystemCommand(const QString &commandName,
                                        const QString &device,
                                        QObject *obj, const char *slot);
